Update and rename character.svg to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-
+<html>
+ <head>
+ </head>
+ <body>
 <svg viewBox="0 0 1920 1080" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
  <rect fill="#ffffff" width="1920" height="1080"/>
  <g filter="url(#0x0000000018470a20)">
@@ -884,3 +887,5 @@
   </filter>
  </defs>
 </svg>
+ </body>
+</html>
